--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
  <body>
     <h1>Expressión en movimiento</h1>
     <p>Ciclopublicidad</p>
+    <img src="https://drive.google.com/file/d/1miv6cPWxPr9yHLNXjSsbdpH0h_8ZA571/view?usp=sharing" alt="logo" with="200"/>
+
  
  </body>
 
